[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/scn_settings.gd" type="Script" id=1]

[node name="GameSettings" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 0.561234
margin_right = 202.0
margin_bottom = 252.561
color = Color( 0.0235294, 0.305882, 0.403922, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 52.3518
margin_top = 33.7024
margin_right = -63.6483
margin_bottom = 36.7026
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChkBoxMusic" type="CheckBox" parent="ColorRect/VBoxContainer"]
margin_right = 86.0
margin_bottom = 24.0
text = "Music"

[node name="ChkBoxSound" type="CheckBox" parent="ColorRect/VBoxContainer"]
margin_top = 28.0
margin_right = 86.0
margin_bottom = 52.0
text = "Sound FX"

[node name="ChkBoxRumble" type="CheckBox" parent="ColorRect/VBoxContainer"]
margin_top = 56.0
margin_right = 86.0
margin_bottom = 80.0
text = "Rumble"

[node name="ButtonMainMenu" type="Button" parent="ColorRect"]
margin_left = 64.0396
margin_top = 168.111
margin_right = 123.04
margin_bottom = 188.111
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ColorRect/ButtonMainMenu" to="." method="_on_ButtonMainMenu_pressed"]
